# commitloom

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  release.py
.github/workflows/: auto-release.yml  ci.yml  manual-publish.yml  publish.yml
commitloom/: __init__.py  __main__.py  main.py
commitloom/cli/: cli_handler.py  console.py  main.py
commitloom/config/: settings.py
commitloom/core/: __init__.py  analyzer.py  batch.py  git.py  smart_grouping.py
commitloom/services/: ai_service.py  metrics.py
docs/usage_metrics/: README.md
tests/: conftest.py  test_ai_service.py  test_analyzer.py  test_batch_processing.py  test_cli_handler.py  test_commit_loom.py  test_console.py  test_git.py  test_main.py  test_metrics.py  test_smart_grouping.py
tests/test_git/: __init__.py  test_commits.py  test_files.py  test_operations.py
